test/TestSuite/Syntax/Errors/empty.tjp
# MARK: error 2 unexpctd_token
